--- a/index.html
+++ b/index.html
@@ -5,8 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intro Component With Sign Up Form</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="hero container">
+        <div class="hero__text">
+          <h1>
+            Learn to code by <br />
+            watching others
+          </h1>
+          <p class="hero__text--paragraph">
+            See how experienced developers solve problems in real-time. Watching
+            scripted tutorials is great, but understanding how developers think
+            is invaluable.
+          </p>
+        </div>
+        <div class="hero__form">
+          <div class="hero__form--info">
+            <p class="hero__form--info-text">
+              Try it free 7 days <span>then $20/mo. thereafter</span>
+            </p>
+          </div>
+          <div class="hero__form--body">
+            <form action="">
+              <input type="text" placeholder="First Name" />
+              <input type="text" placeholder="Last Name" />
+              <input type="text" placeholder="Email Address" />
+              <input type="text" placeholder="Password" />
+              <button>Claim your free trial</button>
+            </form>
+            <p class="hero__form--paragraph">
+              By clicking the button, you are agreeing to our
+              <span>Terms and Services</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
